# agentling

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  cli_advanced_observer.py  cli_failure_recovery.py  cli_math_tutor.py  cli_memory_chat.py  cli_notes_agent.py  cli_repo_assistant.py
examples/skills/code-reviewer/: SKILL.md
src/agentling/: __init__.py  agent.py  errors.py  events.py  memory.py  models.py  skills.py  tools.py
tests/: test_agent.py  test_examples.py  test_memory.py  test_models.py  test_public_api.py  test_skills.py  test_tools.py
